# protect-my-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/scripts/: post_pr_comment.py
.github/workflows/: pmpp-audit.yml  security-scan.yml  tests.yml
pmpp/: __init__.py  cli.py  scanner.py
pmpp/utils/: __init__.py  config.py  gitutils.py  llm.py  patterns.py
scripts/: keybinding_helper.py  run_scan_direct.py  run_scan_filtered.py  scan_target.py
tests/: test_config.py  test_scanner.py
