[project]
name = "protect-my-project"
version = "0.1.0"
description = "A repo scanner that suggests gitignore entries, env var extraction, and detects exposed keys."
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
pmpp = "pmpp.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
