[project]
name = "protect-my-project"
version = "0.1.4"
description = "A repo scanner that suggests gitignore entries, env var extraction, and detects exposed keys."
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [{ name = "Natasha Reis" }]
keywords = ["security", "secrets", "cli", "devtools", "gitignore"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Topic :: Security",
]
dependencies = [
	"click>=8.0",
	"tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/natashareis/protect-my-project"

[project.scripts]
pmpp = "pmpp.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pmpp*"]
